# winasio-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs.save  wrapper.h.save
.github/workflows/: build.yaml
examples/: get.rs
scripts/: cov.ps1
src/: lib.rs  main.rs  winhttp.rs  winhttpn.rs  winhttpw.rs
src/httpsys/: mod.rs  test.rs
src/sys/: event.rs  iocp.rs  mod.rs  wait.rs
src/winhttp/: mod.rs
src/winhttp/fasync/: mod.rs
tests/: test.rs  winhttp.rs
