[package]
name = "winhttp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wchar = "0.11.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winhttp", "errhandlingapi"] }

# using winapi crate. generate is no longer needed.
#[build-dependencies]
#bindgen = "0.53.1"