[package]
name = "winasio-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.43"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinHttp"
]


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"